# serializer version: 1
# name: test_select_ok[select_from_alias_explicit]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
                as_alias
                  ident	alias1
  
  '''
# ---
# name: test_select_ok[select_from_alias_implicit]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
                as_alias
                  ident	alias1
  
  '''
# ---
# name: test_select_ok[select_from_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
            select_item
              select_expr
                column_expr
                  ident	column2
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
            from_clause
              from_item_table
                path_expression
                  ident	table2
  
  '''
# ---
# name: test_select_ok[select_kitchen_sink]
  '''
  start
    query_statement
      query_expr
        select
          select_mode	DISTINCT
          select_list
            select_item
              select_star
                select_star_except
                  ident	column1
                  ident	column2
                select_star_replace
                  alias_expr
                    column_expr
                      ident	column3
                    ident	alias3
                  alias_expr
                    column_expr
                      ident	column4
                    ident	alias4
            select_item
              select_expr
                column_expr
                  ident	column5
            select_item
              select_expr
                column_expr
                  subquery
                    query_expr
                      select
                        select_list
                          select_item
                            select_expr
                              column_expr
                                literal
                                  integer_literal	1
                as_alias
                  ident	column6
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
                as_alias
                  ident	alias1
            from_clause
              from_item_subquery
                query_expr
                  select
                    select_list
                      select_item
                        select_expr
                          column_expr
                            ident	column7
                    select_from
                      from_clause
                        from_item_table
                          path_expression
                            ident	table2
                as_alias
                  ident	alias2
  
  '''
# ---
# name: test_select_ok[select_list_alias_explicit]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
                as_alias
                  ident	alias1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_alias_implicit]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
                as_alias
                  ident	alias1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
            select_item
              select_expr
                column_expr
                  ident	column2
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_trailing_comma]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table2
  
  '''
# ---
# name: test_select_ok[select_literal]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  literal
                    integer_literal	1
  
  '''
# ---
# name: test_select_ok[select_mode_all]
  '''
  start
    query_statement
      query_expr
        select
          select_mode	ALL
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_mode_distinct]
  '''
  start
    query_statement
      query_expr
        select
          select_mode	DISTINCT
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_star]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_star
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_except_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_star
                select_star_except
                  ident	column1
                  ident	column2
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_except_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_star
                select_star_except
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_replace_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_star
                select_star_replace
                  alias_expr
                    column_expr
                      ident	column1
                    ident	alias1
                  alias_expr
                    column_expr
                      ident	column2
                    ident	alias2
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_replace_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_star
                select_star_replace
                  alias_expr
                    column_expr
                      ident	column1
                    ident	alias1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_scoped]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_dot_star
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_scoped_nested]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_dot_star
                column_expr
                  column_expr
                    ident	column1
                  ident	column2
          select_from
            from_clause
              from_item_table
                path_expression
                  ident	table1
  
  '''
# ---
# name: test_subquery_ok[select_from_subquery]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_subquery
                query_expr
                  select
                    select_list
                      select_item
                        select_expr
                          column_expr
                            ident	column1
                    select_from
                      from_clause
                        from_item_table
                          path_expression
                            ident	table1
  
  '''
# ---
# name: test_subquery_ok[select_from_subquery_aliased]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            select_item
              select_expr
                column_expr
                  ident	column1
          select_from
            from_clause
              from_item_subquery
                query_expr
                  select
                    select_list
                      select_item
                        select_expr
                          column_expr
                            ident	column1
                    select_from
                      from_clause
                        from_item_table
                          path_expression
                            ident	table1
                as_alias
                  ident	table2
  
  '''
# ---
# name: test_subquery_ok[subquery]
  '''
  start
    query_statement
      query_expr
        subquery
          query_expr
            select
              select_list
                select_item
                  select_expr
                    column_expr
                      literal
                        integer_literal	1
  
  '''
# ---
# name: test_subquery_ok[subquery_nested]
  '''
  start
    query_statement
      query_expr
        subquery
          query_expr
            select
              select_list
                select_item
                  select_expr
                    column_expr
                      subquery
                        query_expr
                          select
                            select_list
                              select_item
                                select_expr
                                  column_expr
                                    subquery
                                      query_expr
                                        select
                                          select_list
                                            select_item
                                              select_expr
                                                column_expr
                                                  literal
                                                    integer_literal	1
  
  '''
# ---
